# poet

./: .gitignore  README  poet.cabal  run.sh  rundebug.sh  visualizedebug.sh
data/: temp.txt  test.src
project/makehaskell/: Makefile
src/haskell/: Main.hs  Parser.hs  langlangdata.hs  langlangparser.hs  langlangsemantic.hs  parser.hs  poet.hs
src/haskell/LangLang/: Data.hs  Debug.hs  Parser.hs  Semantic.hs
